ready to start api

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
   <!-- // -->
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" id="darkLink" href="#">Dark mode</a>
-          <a class="nav-link" id="gmailLink" href="#">Gmail</a>
-          <a class="nav-link" id="aboutLink" href="#">About</a>
-        </div>
+      <div class="navbar-nav">
+        <a class="nav-link text" id="darkLink" href="#">Dark mode</a>
+        <a class="nav-link text" id="gmailLink" href="#">Gmail</a>
+        <a class="nav-link text" id="aboutLink" href="#">About</a>
       </div>
+      <!-- <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        
+      </div> -->
     </nav>
   </body>
 </html>
