add click button and direct to searchpage

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <form action="" class="searchfunction">
           <input type="text" placeholder="Search" id= "searchBar">
           <div>
-              <a href="#"><input type="button" value="Google Search" id="button1"></a>
-              <a href=""><input type="button" value="I'm Feeling Lucky" id=""></a>
+              <a href="searchpage.html"><input type="button" value="Google Search" id="button1"></a>
+              <a href="searchpage.html"><input type="button" value="I'm Feeling Lucky" id=""></a>
           </div>
           
       </form>
