--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <link rel="stylesheet" href="index.css">
    
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
   </head>
 
   <!-- // -->
@@ -38,7 +38,7 @@
           <input type="text" placeholder="Search" id= "searchBar">
           <div>
               <a href="searchpage.html"><input type="button" value="Google Search" id="button1"></a>
-              <a href="searchpage.html"><input type="button" value="I'm Feeling Lucky" id=""></a>
+              <a href="https://www.nba.com/"><input type="button" value="I'm Feeling Lucky" id=""></a>
           </div>
           
       </form>
