--- a/fakeSearchResult.html
+++ b/fakeSearchResult.html
@@ -8,6 +8,18 @@
     <title>Document</title>
   </head>
   <body>
-    <div></div>
+    <div>
+        <style>
+            ul{background-color: cadetblue;}
+        </style>
+        <ul>
+            <li>1</li>
+            <li>2</li>
+            <li>3</3li>
+            <li>4</li>
+            <li>5</li>
+        </ul>
+        <p id="placeholderForAPI">placeholder</p>
+    </div>
   </body>
 </html>
